<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SubscriptionActivity"
    tools:showIn="@layout/app_bar_subscription">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:contentDescription="@string/description"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:srcCompat="@drawable/logo"/>

            <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:onClick="chooseSubscription"-->
            <!--android:text="@string/choisissez_type_abonnement"-->
            <!--android:textColor="@color/white"/>-->

            <LinearLayout
                android:id="@+id/info_compte"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/type_abonnement"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/information_du_compte"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_nom_utilisateur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom_utilisateur"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_mot_passe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mot_de_passe"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_confirmer_mot_passe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirmer_mot_de_passe"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/adresse_email"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_confirmer_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirmez_email"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_facturation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:text="@string/information_de_facturation"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prenom"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_adresse1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/adresse_1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_adresse2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/adresse_2"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_ville"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ville"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_pays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pays"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="259dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/subscription_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/primary"
                android:onClick="submit"
                android:text="@string/soumettre"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>